config/objects/Consumer__c.object
<CustomObject>
    <fields>
        <fullName>First_Name__c</fullName>
        <label>First Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Name__c</fullName>
        <label>Last Name</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lifetime_Spend__c</fullName>
        <label>Lifetime Spend</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Consumer</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>{0} - Member Since {YYYY}</displayFormat>
        <label>Consumer Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Consumers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>